--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "graphql": "^16.5.0",
     "next": "12.2.2",
     "path": "^0.12.7",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "responsive-loader": "^3.0.4",
