--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "react-dom": "^18.2.0",
         "responsive-loader": "^3.0.4",
         "sass": "^1.62.1",
-        "sharp": "^0.30.7"
+        "sharp": "^0.30.7",
+        "swiper": "^10.3.1"
     },
     "devDependencies": {
         "@babel/core": "^7.22.1",
