--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
+          "common/*": ["src/common/*"],
           "pages/*": ["src/pages/*"],
           "components/*": ["src/components/*"],
           "modules/*": ["src/modules/*"],
