--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@builder.io/partytown": "^0.7.5",
         "@next/eslint-plugin-next": "^13.5.4",
         "@next/font": "^13.1.1",
+        "antd": "^5.9.4",
         "env-cmd": "^10.1.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "fs": "^0.0.1-security",
