--- a/package.json
+++ b/package.json
@@ -1,72 +1,76 @@
 {
-    "name": "gleads-demo",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "npm run partytown && next build",
-        "start": "next start",
-        "lint": "next lint",
-        "build:production": "npm run partytown && env-cmd -f .env.production next build && next export",
-        "build:development": "npm run partytown && env-cmd -f .env.development next build && next export",
-        "partytown": "partytown copylib public/~partytown"
-    },
-    "dependencies": {
-        "@apollo/client": "^3.6.9",
-        "@builder.io/partytown": "^0.7.5",
-        "@next/eslint-plugin-next": "^13.5.4",
-        "@next/font": "^13.1.1",
-        "antd": "^5.9.4",
-        "env-cmd": "^10.1.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "fs": "^0.0.1-security",
-        "graphql": "^16.5.0",
-        "next": "^13.1.1",
-        "path": "^0.12.7",
-        "postcss-flexbugs-fixes": "^5.0.2",
-        "postcss-preset-env": "^7.8.2",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "responsive-loader": "^3.0.4",
-        "sass": "^1.62.1",
-        "sharp": "^0.30.7",
-        "swiper": "^10.3.1"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.22.1",
-        "@babel/preset-env": "^7.22.4",
-        "@babel/preset-react": "^7.22.3",
-        "@tailwindcss/aspect-ratio": "^0.4.2",
-        "@tailwindcss/container-queries": "^0.1.1",
-        "@tailwindcss/forms": "^0.5.6",
-        "@tailwindcss/typography": "^0.5.10",
-        "autoprefixer": "^10.4.16",
-        "babel-jest": "^29.5.0",
-        "babel-loader": "^9.1.2",
-        "css-loader": "^6.8.1",
-        "dotenv": "^16.1.3",
-        "dotenv-webpack": "^8.0.1",
-        "eslint": "^8.41.0",
-        "eslint-config-next": "13.5.4",
-        "eslint-plugin-react": "^7.33.2",
-        "file-loader": "^6.2.0",
-        "html-webpack-plugin": "^5.5.1",
-        "interpolate-html-plugin": "^4.0.0",
-        "jest": "^29.5.0",
-        "mini-css-extract-plugin": "^2.7.6",
-        "postcss": "^8.4.31",
-        "postcss-loader": "^7.3.2",
-        "postcss-nesting": "^11.2.2",
-        "prettier": "2.8.8",
-        "react-error-overlay": "6.0.9",
-        "sass": "^1.62.1",
-        "sass-loader": "^13.3.1",
-        "style-loader": "^3.3.3",
-        "tailwind-bootstrap-grid": "^5.0.1",
-        "tailwindcss": "^3.3.3",
-        "url-loader": "^4.1.1",
-        "webpack": "^5.85.0",
-        "webpack-cli": "^5.1.1",
-        "webpack-dev-server": "^4.15.0"
-    }
+  "name": "gleads-demo",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "npm run partytown && next build",
+    "start": "next start",
+    "lint": "next lint",
+    "build:production": "npm run partytown && env-cmd -f .env.production next build && next export",
+    "build:development": "npm run partytown && env-cmd -f .env.development next build && next export",
+    "partytown": "partytown copylib public/~partytown",
+    "db:migrate": "npx prisma migrate dev --name note-entity --create-only && yarn prisma generate",
+    "db:push": "npx prisma db push"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "@builder.io/partytown": "^0.7.5",
+    "@next/eslint-plugin-next": "^13.5.4",
+    "@next/font": "^13.1.1",
+    "@prisma/client": "^5.5.2",
+    "antd": "^5.9.4",
+    "env-cmd": "^10.1.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "fs": "^0.0.1-security",
+    "graphql": "^16.5.0",
+    "next": "^13.1.1",
+    "path": "^0.12.7",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.8.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "responsive-loader": "^3.0.4",
+    "sass": "^1.62.1",
+    "sharp": "^0.30.7",
+    "swiper": "^10.3.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.16",
+    "babel-jest": "^29.5.0",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.8.1",
+    "dotenv": "^16.1.3",
+    "dotenv-webpack": "^8.0.1",
+    "eslint": "^8.41.0",
+    "eslint-config-next": "13.5.4",
+    "eslint-plugin-react": "^7.33.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.1",
+    "interpolate-html-plugin": "^4.0.0",
+    "jest": "^29.5.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.2",
+    "postcss-nesting": "^11.2.2",
+    "prettier": "2.8.8",
+    "prisma": "^5.5.2",
+    "react-error-overlay": "6.0.9",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
+    "style-loader": "^3.3.3",
+    "tailwind-bootstrap-grid": "^5.0.1",
+    "tailwindcss": "^3.3.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.85.0",
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0"
+  }
 }
